CHANGES.txt - 02/08/2001
------------------------

CHANGES IN CUPS V1.1.6-3

	- The configure script put the JPEG library before the
	  TIFF library; this caused problems in some
	  configurations since the TIFF library also supports
	  JPEG compression of TIFF images.
	- The updated cupsTempFile() function did not return
	  the filename when called with a filename buffer of
	  NULL (previously it used a static buffer.)
	- FreeBSD uses /dev/unlptN, but NetBSD and OpenBSD use
	  /dev/ulptN.
	- DeletePrinter() didn't remove the printer from any
	  classes it was a member of.
	- DeletePrinterFromClass() didn't preserve the
	  implicit status of a class.
	- DeletePrinterFromClasses() didn't remove printers
	  from implicit classes.
	- Caldera fix: lpr didn't recognize BSD lpr "-1", "-2",
	  "-3", or "-4" options.
	- SuSE fix: Exit from child if setgid() or setuid()
	  fails.
	- SuSE fix: Added setgroups() calls after setgid() and
	  setuid() calls.
	- SuSE fix: potential buffer overflows in httpEncode64()
	  calls.
	- SuSE fix: potential buffer overflows in httpSeparate()
	- SuSE fix: potential buffer overflows in ippWrite() for
	  bad input.
	- SuSE fix: potential nul skip in ppd_decode() for
	  missing hex digits.


CHANGES IN CUPS V1.1.6-2

	- Added changes to support NetBSD startup scripts.
	- Added separate compiler options for pstoraster
	  (Ghostscript) to avoid compiler-induced errors
	  from Ghostscript's twisted code.
	- The mime.types file contained syntax errors.
	- Updated the *BSD USB device filenames to use
	  the /dev/unlptN files so that the USB device
	  is not reset prior to printing (causes print
	  corruption on many printers)
	- Added new cupsTempFd() function to avoid serious
	  security bug in glibc fopen() function.  The glibc
	  fopen() function unlinks a file before creating it,
	  which opens up possible symlink attacks.
	- Now reject 0-length names in add-printer and add-class
	  requests.
	- Fix for pstoraster when ZLIB is not available.